# mit-skate-cal

./: .gitignore  Dockerfile  Makefile  README.rst  docker-compose.yml  pyproject.toml
mit_skate_cal/: main.py
radicale_config/: config.ini  rights.ini
